exports[`Menu applies translations 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item">
      <a
        className="itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="itemLabel">
          white
        </span>
         
        <span
          className="itemCount">
          10
        </span>
      </a>
    </div>
    <div
      className="item">
      <a
        className="itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="itemLabel">
          black
        </span>
         
        <span
          className="itemCount">
          20
        </span>
      </a>
    </div>
  </div>
  <button
    className="showMore"
    disabled={false}
    onClick={[Function]}>
     display more
  </button>
</div>
`;

exports[`Menu default menu 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item">
      <a
        className="itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="itemLabel">
          white
        </span>
         
        <span
          className="itemCount">
          10
        </span>
      </a>
    </div>
    <div
      className="item">
      <a
        className="itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="itemLabel">
          black
        </span>
         
        <span
          className="itemCount">
          20
        </span>
      </a>
    </div>
  </div>
  <button
    className="showMore"
    disabled={false}
    onClick={[Function]}>
    Show more
  </button>
</div>
`;
